--- a/TP_06.vcxproj
+++ b/TP_06.vcxproj
@@ -19,29 +19,29 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="src\Archer.cpp" />
-    <ClCompile Include="src\ConsoleHandle.cpp" />
-    <ClCompile Include="src\CrossbowMan.cpp" />
-    <ClCompile Include="src\Game.cpp" />
-    <ClCompile Include="src\Lancer.cpp" />
+    <ClCompile Include="src\Game\Game.cpp" />
+    <ClCompile Include="src\Game\Soldier\Melee\Lancer\Lancer.cpp" />
+    <ClCompile Include="src\Game\Soldier\Melee\MeleeSoldier.cpp" />
+    <ClCompile Include="src\Game\Soldier\Melee\SwordMan\SwordMan.cpp" />
+    <ClCompile Include="src\Game\Soldier\Ranged\Archer\Archer.cpp" />
+    <ClCompile Include="src\Game\Soldier\Ranged\CrossbowMan\CrossbowMan.cpp" />
+    <ClCompile Include="src\Game\Soldier\Ranged\RangedSoldier.cpp" />
+    <ClCompile Include="src\Game\Soldier\Soldier.cpp" />
     <ClCompile Include="src\main.cpp" />
-    <ClCompile Include="src\MeleeSoldier.cpp" />
-    <ClCompile Include="src\Random.cpp" />
-    <ClCompile Include="src\RangedSoldier.cpp" />
-    <ClCompile Include="src\Soldier.cpp" />
-    <ClCompile Include="src\SwordMan.cpp" />
+    <ClCompile Include="src\Utils\ConsoleHandle.cpp" />
+    <ClCompile Include="src\Utils\Random.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="src\Archer.h" />
-    <ClInclude Include="src\ConsoleHandle.h" />
-    <ClInclude Include="src\CrossbowMan.h" />
-    <ClInclude Include="src\Game.h" />
-    <ClInclude Include="src\Lancer.h" />
-    <ClInclude Include="src\MeleeSoldier.h" />
-    <ClInclude Include="src\Random.h" />
-    <ClInclude Include="src\RangedSoldier.h" />
-    <ClInclude Include="src\Soldier.h" />
-    <ClInclude Include="src\SwordMan.h" />
+    <ClInclude Include="src\Game\Game.h" />
+    <ClInclude Include="src\Game\Soldier\Melee\Lancer\Lancer.h" />
+    <ClInclude Include="src\Game\Soldier\Melee\MeleeSoldier.h" />
+    <ClInclude Include="src\Game\Soldier\Melee\SwordMan\SwordMan.h" />
+    <ClInclude Include="src\Game\Soldier\Ranged\Archer\Archer.h" />
+    <ClInclude Include="src\Game\Soldier\Ranged\CrossbowMan\CrossbowMan.h" />
+    <ClInclude Include="src\Game\Soldier\Ranged\RangedSoldier.h" />
+    <ClInclude Include="src\Game\Soldier\Soldier.h" />
+    <ClInclude Include="src\Utils\ConsoleHandle.h" />
+    <ClInclude Include="src\Utils\Random.h" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>17.0</VCProjectVersion>
@@ -117,6 +117,7 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>WIN32;_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
+      <AdditionalIncludeDirectories>$(SolutionDir)src;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -131,6 +132,7 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>WIN32;NDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
+      <AdditionalIncludeDirectories>$(SolutionDir)src;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -145,6 +147,7 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
+      <AdditionalIncludeDirectories>$(SolutionDir)src;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -159,6 +162,7 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>NDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
+      <AdditionalIncludeDirectories>$(SolutionDir)src;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
